<resources>
    <string name="app_name">HeroFinder</string>

    <!-- BottomBar -->
    <string name="buscar">Buscar</string>
    <string name="aleatorio">Aleatorio</string>
    <string name="heroe">Héroe</string>
    <string name="infoHeroe">Información</string>

    <!-- DetailHeroFragment -->
    <string name="tvFullNameText">Nombre completo</string>
    <string name="tvAlterEgosText">Alter Egos</string>
    <string name="tvAliasesText">Alias</string>
    <string name="tvPlaceBirthText">Lugar de nacimiento</string>
    <string name="tvFirstAppearanceText">Primera aparición</string>
    <string name="tvPublisherText">Editorial</string>
    <string name="tvAlignmentText">Alineación</string>
    <string name="tvBiographyText">Biografía</string>
    <string name="tvAppearanceText">Apariencia</string>
    <string name="tvPowerstatsText">Estadísticas</string>
    <string name="tvintelligenceText">Inteligencia</string>
    <string name="tvstrengthText">Fuerza</string>
    <string name="tvcombatText">Combate</string>
    <string name="tvspeedText">Velocidad</string>
    <string name="tvdurabilityText">Durabilidad</string>
    <string name="tvpowerText">Poder</string>
    <string name="tvGenderText">Genero</string>
    <string name="tvRaceText">Raza</string>
    <string name="tvWorkText">Trabajo</string>
    <string name="tvOccupationText">Ocupación</string>
    <string name="tvBaseText">Base</string>

    <!-- SearchHeroFragment -->
    <string name="tvTitleResultText">Resultado para: \t</string>
    <string name="tvTitleResultTextError">Sin conexión a la pagina</string>

    <!-- RandomHeroFragment -->
    <string name="tvIdRandomText">ID: \t</string>
    <string name="tvRandomHeroText">\? ? ? ?</string>

    <!-- LoginActivity -->
    <string name="btLoginText">Entrar</string>
    <string name="btToSignupText">Registrarse</string>
    <string name="tvLoginToForgotPasswordText"><u>He olvidado mi contraseña</u></string>

    <!-- LoginActivity && SignupActivity -->
    <string name="tietEmailText">Email</string>
    <string name="tietPasswordText">Contraseña</string>
    <string name="ErrorEmail">El email no es válido</string>
    <string name="ErrorPassword">La contraseña debe contener al menos 6 caracteres</string>

    <!-- ErrorDialog -->
    <string name="loginErrorDialogTitle">No hemos encontrado el usuario</string>
    <string name="loginErrorDialogBody">Verifique los datos o vuelva a intentarlo</string>
    <string name="loginErrorDialogNegativeAction">Cancelar</string>
    <string name="loginErrorDialogPositiveAction">Reintentar</string>

    <!-- SignupActivity -->
    <string name="titleActivitySignup">SignupActivity</string>
    <string name="tietUsernameText">Nombre de usuario</string>
    <string name="tietRepeatPasswordText">Confirmar contraseña</string>
    <string name="btSignupText">Crear Cuenta</string>
    <string name="tvToLoginText"><u>¿Ya tienes cuenta? Inicia sesión</u></string>
    <string name="ErrorUsername">El usuario debe contener al menos 6 caracteres</string>
    <string name="ErrorRepeatPassword">La contraseña no coincide</string>
    <string name="signupErrorDialogTitle">Ha ocurrido un error</string>
    <string name="signupErrorDialogBody">No hemos podido crear su cuenta, inténtalo de nuevo más tarde</string>
    <string name="signupErrorDialogPositiveAction">Aceptar</string>
    <string name="signupErrorDialogDuplicateUserTitle">El usuario ya existe</string>
    <string name="signupErrorDialogDuplicateUserBody">El email ya esta registrado con otro usuario </string>
    <string name="signupErrorDialogNetworkTitle">Sin conexión a la pagina</string>

    <!-- ForgotPasswordActivity -->
    <string name="btForgotpasswordText">Enviar email</string>
    <string name="tvForgotPasswordToLoginText"><u>¿Recuerdas la contraseña? Inicia sesión</u></string>
    <string name="tvInfoForgotpasswordBodyText">Ingrese su dirección de correo electrónico y le enviaremos un correo electrónico para restablecer su contraseña</string>
    <string name="tvInfoForgotpasswordTitleText">¿Ha olvidado su contrseña?</string>
    <string name="forgotpasswordErrorDialogTitle">Correo electrónico no encontrado</string>
    <string name="forgotpasswordErrorDialogBody">No hemos podido encontrar la dirección de correo electrónico</string>
    <string name="forgotpasswordErrorDialogPositiveAction">Aceptar</string>
    <string name="forgotpasswordSuccessDialogTitle">Correo electrónico enviado</string>
    <string name="forgotpasswordSuccessDialogBody">Se ha enviando un email a su dirección de correo electrónico</string>
    <string name="forgotpasswordSuccessDialogPositiveAction">Aceptar</string>
    
    <!-- FavHeroFragment -->
    <string name="tvFavHeroNoDataFound">\? ? ? ? ?</string>
    <string name="btSignOffText">Cerrar Sesión</string>
    <string name="favHeroErrorDialogTitle">Ha ocurrido un error</string>
    <string name="favHeroErrorDialogBody">No hemos logrado cerrar sesión inténtelo más tarde</string>
    <string name="favHeroErrorDialogPositiveAction">Reintentar</string>
    <string name="favHeroErrorDialogNegativeAction">Cancelar</string>
</resources>