<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.login.LoginActivity">

    <include
        android:id="@+id/ivBannerHero"
        layout="@layout/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dlMarginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dlMarginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/tvInfoForgotpasswordTitle"
        style="@style/Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvInfoForgotpasswordTitleText"
        app:layout_constraintEnd_toStartOf="@+id/dlMarginRight"
        app:layout_constraintStart_toStartOf="@+id/dlMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/ivBannerHero" />

    <TextView
        android:id="@+id/tvInfoForgotpasswordBody"
        style="@style/BodyText1"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvInfoForgotpasswordBodyText"
        app:layout_constraintEnd_toStartOf="@+id/dlMarginRight"
        app:layout_constraintStart_toStartOf="@+id/dlMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoForgotpasswordTitle" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotPasswordToLogin"
        app:layout_constraintEnd_toStartOf="@+id/dlMarginRight"
        app:layout_constraintStart_toStartOf="@+id/dlMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/tilForgotpasswordEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilForgotpasswordEmail"
        style="@style/FormTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/dlMarginRight"
        app:layout_constraintStart_toStartOf="@+id/dlMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoForgotpasswordBody">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietForgotpasswordEmail"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tietEmailText"
            android:inputType="textEmailSubject" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPasswordToLogin"
        style="@style/ButtonTertiary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tvForgotPasswordToLoginText"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/btForgotpassword"
        app:layout_constraintEnd_toStartOf="@+id/dlMarginRight"
        app:layout_constraintStart_toStartOf="@+id/dlMarginLeft" />

    <Button
        android:id="@+id/btForgotpassword"
        style="@style/ButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btForgotpasswordText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dlMarginRight"
        app:layout_constraintStart_toStartOf="@+id/dlMarginLeft"
        app:layout_constraintTop_toBottomOf="@+id/tilForgotpasswordEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>